Trying to fix blurry text in non-retina screens

--- a/src/components/MapVisualization/MapVisualization.scss
+++ b/src/components/MapVisualization/MapVisualization.scss
@@ -6,6 +6,9 @@
   }
   .mapboxgl-map {
     width: 100%;
+    .mapboxgl-popup {
+      width: 300px;
+    }
   }
   position:relative;
   z-index:10;
