--- a/src/components/SearchResultsView/SearchResultsView.scss
+++ b/src/components/SearchResultsView/SearchResultsView.scss
@@ -1,7 +1,7 @@
 @import "./UniversalStyles";
 
 .main-contents {
-  // min-height: 200px;
+  min-height: 200px;
   position:relative;
   z-index:20;
 }
